--- a/pages/8170.html
+++ b/pages/8170.html
@@ -332,7 +332,7 @@ margin-left: 0em;
 <li id='Kane11'><a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, <em>String theory and generic predictions for our world – superpartner masses, LHC signatures, dark matter, EWSB, cosmological history of universe, etc</em>, talk at String phenomenology 2011, August 2011 (<a href='http://conferencing.uwex.edu/conferences/stringpheno2011/documents/kane.pdf'>pdf</a>)</li>
 </ul>
 
-<p>a few months before the actual detection of the Higgs particle (and its <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> of <math class='maruku-mathml' display='inline' id='mathml_58f78ccc7233d574e5d1625ba06fc0126eeec9c3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∼</mo><mn>125</mn></mrow><annotation encoding='application/x-tex'>\sim 125</annotation></semantics></math><a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>) at the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, and with more details in</p>
+<p>a few months before the actual detection of the Higgs particle (and its <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> of <math class='maruku-mathml' display='inline' id='mathml_8777ac02389623da806b3b51f3109f6abbfef385_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∼</mo><mn>125</mn></mrow><annotation encoding='application/x-tex'>\sim 125</annotation></semantics></math><a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>) at the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, and with more details in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, <a class='existingWikiWord' href='/nlab/show/Piyush+Kumar'>Piyush Kumar</a>, Ran Lu, Bob Zheng, <em>Higgs Mass Prediction for Realistic String/M Theory Vacua</em>, Phys. Rev. D 85, 075026 (<a href='http://arxiv.org/abs/1112.1059'>arXiv:1112.1059</a>)</li>
@@ -360,7 +360,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_58f78ccc7233d574e5d1625ba06fc0126eeec9c3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_8777ac02389623da806b3b51f3109f6abbfef385_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -368,7 +368,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a>, <a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a></p>
 </li>
 
 <li>
@@ -384,14 +384,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 16, 2018 14:36:49 
+  Revised on February 19, 2018 01:17:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gordon+Kane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gordon+Kane/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Gordon+Kane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gordon+Kane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gordon+Kane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gordon+Kane/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Gordon+Kane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gordon+Kane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
