--- a/pages/17087.html
+++ b/pages/17087.html
@@ -1041,7 +1041,7 @@ margin-left: 0em;
 <p>The terminology “Coulomb branch” and “Higgs branch” first appears in</p>
 
 <ul>
-<li id='SeibergWitten94'><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math class='maruku-mathml' display='inline' id='mathml_cb51e12084cb7978d4cf2b117157e402f5466cc5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href='http://arxiv.org/abs/hep-th/9408099'>arXiv:hep-th/9408099</a>)</li>
+<li id='SeibergWitten94'><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math class='maruku-mathml' display='inline' id='mathml_90aa2b1f60e40a1e6ef012153c79adb852b3f65f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href='http://arxiv.org/abs/hep-th/9408099'>arXiv:hep-th/9408099</a>)</li>
 </ul>
 
 <p>Review includes</p>
@@ -1054,11 +1054,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_cb51e12084cb7978d4cf2b117157e402f5466cc5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, I</em> (<a href='http://arxiv.org/abs/1503.03676'>arXiv:1503.03676</a>)</p>
+<p>Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_90aa2b1f60e40a1e6ef012153c79adb852b3f65f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, I</em> (<a href='http://arxiv.org/abs/1503.03676'>arXiv:1503.03676</a>)</p>
 </li>
 
 <li>
-<p>Alexander Braverman, Michael Finkelberg, Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_cb51e12084cb7978d4cf2b117157e402f5466cc5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, II</em> (<a href='http://arxiv.org/abs/1601.03586'>arXiv:1601.03586</a>)</p>
+<p>Alexander Braverman, Michael Finkelberg, Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_90aa2b1f60e40a1e6ef012153c79adb852b3f65f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, II</em> (<a href='http://arxiv.org/abs/1601.03586'>arXiv:1601.03586</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Constantin+Teleman'>Constantin Teleman</a>, <em>The role of Coulomb branches in 2D gauge theory</em>, (<a href='https://arxiv.org/abs/1801.10124'>arXiv:1801.10124</a>)</p>
 </li>
 </ul>
 
@@ -1071,14 +1075,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 22, 2017 09:21:28 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.41.133.199)
+  Revised on February 19, 2018 11:52:55 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Coulomb+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coulomb+branch/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Coulomb+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coulomb+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Coulomb+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coulomb+branch/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Coulomb+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coulomb+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
