--- a/pages/18520.html
+++ b/pages/18520.html
@@ -308,7 +308,129 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>An <em>even number</em> is an <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> <math class='maruku-mathml' display='inline' id='mathml_00bfd03b3144140dc7eacd151d2522970beb1cf1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{Z}</annotation></semantics></math> that is a multiple of 2, hence such that <math class='maruku-mathml' display='inline' id='mathml_00bfd03b3144140dc7eacd151d2522970beb1cf1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>=</mo><mn>2</mn><mi>k</mi></mrow><annotation encoding='application/x-tex'>n = 2 k</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_00bfd03b3144140dc7eacd151d2522970beb1cf1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{Z}</annotation></semantics></math>.</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='arithmetic'>Arithmetic</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/number+theory'>number theory</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic'>arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+geometry'>arithmetic geometry</a>, <a class='existingWikiWord' href='/nlab/show/arithmetic+topology'>arithmetic topology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+dimensional+arithmetic+geometry'>higher arithmetic geometry</a>, <a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+geometry'>E-∞ arithmetic geometry</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/number'>number</a></strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a>, <a class='existingWikiWord' href='/nlab/show/integer'>integer number</a>, <a class='existingWikiWord' href='/nlab/show/rational+number'>rational number</a>, <a class='existingWikiWord' href='/nlab/show/real+number'>real number</a>, <a class='existingWikiWord' href='/nlab/show/irrational+number'>irrational number</a>, <a class='existingWikiWord' href='/nlab/show/complex+number'>complex number</a>, <a class='existingWikiWord' href='/nlab/show/quaternion'>quaternion</a>, <a class='existingWikiWord' href='/nlab/show/octonion'>octonion</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+number'>adic number</a>, <a class='existingWikiWord' href='/nlab/show/cardinal+number'>cardinal number</a>, <a class='existingWikiWord' href='/nlab/show/ordinal+number'>ordinal number</a>, <a class='existingWikiWord' href='/nlab/show/surreal+number'>surreal number</a></li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/arithmetic'>arithmetic</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peano+arithmetic'>Peano arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/second-order+arithmetic'>second-order arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/transfinite+arithmetic'>transfinite arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/cardinal+arithmetic'>cardinal arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/ordinal+arithmetic'>ordinal arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/prime+field'>prime field</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+integer'>p-adic integer</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic rational number</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+complex+number'>p-adic complex number</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/arithmetic+geometry'>arithmetic geometry</a></strong>, <a class='existingWikiWord' href='/nlab/show/function+field+analogy'>function field analogy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+scheme'>arithmetic scheme</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+curve'>arithmetic curve</a>, <a class='existingWikiWord' href='/nlab/show/elliptic+curve'>elliptic curve</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+genus'>arithmetic genus</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Chern-Simons+theory'>arithmetic Chern-Simons theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Chow+group'>arithmetic Chow group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Weil-%C3%A9tale+topology+for+arithmetic+schemes'>Weil-étale topology for arithmetic schemes</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/absolute+cohomology'>absolute cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Weil+conjecture+on+Tamagawa+numbers'>Weil conjecture on Tamagawa numbers</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Borger%27s+absolute+geometry'>Borger&#39;s absolute geometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Iwasawa-Tate+theory'>Iwasawa-Tate theory</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/arithmetic+jet+space'>arithmetic jet space</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adelic+integral'>adelic integration</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/shtuka'>shtuka</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Frobenioid'>Frobenioid</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Arakelov+geometry'>Arakelov geometry</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Riemann-Roch+theorem'>arithmetic Riemann-Roch theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/differential+algebraic+K-theory'>differential algebraic K-theory</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<p>An <em>even number</em> is an <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> <math class='maruku-mathml' display='inline' id='mathml_f7f762bf2058aef5531be789ca5fe03334ec1ee5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{Z}</annotation></semantics></math> that is a multiple of 2, hence such that <math class='maruku-mathml' display='inline' id='mathml_f7f762bf2058aef5531be789ca5fe03334ec1ee5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>=</mo><mn>2</mn><mi>k</mi></mrow><annotation encoding='application/x-tex'>n = 2 k</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_f7f762bf2058aef5531be789ca5fe03334ec1ee5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{Z}</annotation></semantics></math>.</p>
 
 <p>Am <em>odd number</em> is an integer that is not an even number.</p>
 
@@ -318,17 +440,21 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Created on August  4, 2017 08:40:38 
+  Revised on February 19, 2018 11:45:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.75.2)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/even+number" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/even+number" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/even+number/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/even+number" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/even+number" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
