--- a/pages/5636.html
+++ b/pages/5636.html
@@ -1073,7 +1073,7 @@ margin-left: 0em;
 <p>The original article is</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopole Condensation, And Confinement In <math class='maruku-mathml' display='inline' id='mathml_440beb560f8cf0689e5ab60db57c723eb801ad27_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric Yang-Mills Theory</em>. Nucl.Phys.B426:19-52,1994; Erratum-ibid.B430:485-486,1994 (<a href='arxiv.org/abs/hep-th/9407087'>arXiv:hep-th/9407087</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopole Condensation, And Confinement In <math class='maruku-mathml' display='inline' id='mathml_16ddcab23a329bc1efd68b8f13840c7ceca95f8b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric Yang-Mills Theory</em>. Nucl.Phys.B426:19-52,1994; Erratum-ibid.B430:485-486,1994 (<a href='arxiv.org/abs/hep-th/9407087'>arXiv:hep-th/9407087</a>)</li>
 </ul>
 
 <p>Reviews include</p>
@@ -1092,11 +1092,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>piljin yi, <em>Seiberg-Witten theory – with a view toward MQCD</em> (<a href='http://newton.kias.re.kr/~piljin/public_html/thesis/SW-MQCD.pdf‎'>pdf</a>)</p>
+<p>piljin yi, <em>Seiberg-Witten theory – with a view toward MQCD</em> (<a href='http://newton.kias.re.kr/~piljin/public_html/thesis/SW-MQCD.pdf&amp;#8206;'>pdf</a>)</p>
 </li>
 
 <li>
-<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Seiberg–Witten_invariant'>Seiberg-Witten invariants</a></em></p>
+<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Seiberg-Witten_invariant'>Seiberg-Witten invariants</a></em></p>
 </li>
 </ul>
 
@@ -1138,14 +1138,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2016 03:04:01 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.35.50.158)
+  Revised on February 19, 2018 12:02:36 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Seiberg-Witten+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Seiberg-Witten+theory/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Seiberg-Witten+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Seiberg-Witten+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Seiberg-Witten+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Seiberg-Witten+theory/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Seiberg-Witten+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Seiberg-Witten+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
