--- a/pages/18938.html
+++ b/pages/18938.html
@@ -308,18 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    
+    <p><div class='property'> category: <a class='category_link' href='/nlab/list/empty'>empty</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2018 04:38:59 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  Revised on February 19, 2018 16:59:36 
+  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
+  (64.89.52.20)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/empty+165" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+165/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/empty+165" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+165" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/empty+165" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+165/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/empty+165" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+165" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
