--- a/pages/17087.html
+++ b/pages/17087.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1041,7 +1041,7 @@ margin-left: 0em;
 <p>The terminology “Coulomb branch” and “Higgs branch” first appears in</p>
 
 <ul>
-<li id='SeibergWitten94'><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math class='maruku-mathml' display='inline' id='mathml_162119e19154492838ef41aaa13733a05834f1c8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href='http://arxiv.org/abs/hep-th/9408099'>arXiv:hep-th/9408099</a>)</li>
+<li id='SeibergWitten94'><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math class='maruku-mathml' display='inline' id='mathml_7ed3be712d9ea43678fe8e279fa58d44c49e9777_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href='http://arxiv.org/abs/hep-th/9408099'>arXiv:hep-th/9408099</a>)</li>
 </ul>
 
 <p>Review includes</p>
@@ -1054,15 +1054,19 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_162119e19154492838ef41aaa13733a05834f1c8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, I</em> (<a href='http://arxiv.org/abs/1503.03676'>arXiv:1503.03676</a>)</p>
+<p>Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_7ed3be712d9ea43678fe8e279fa58d44c49e9777_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, I</em> (<a href='http://arxiv.org/abs/1503.03676'>arXiv:1503.03676</a>)</p>
 </li>
 
 <li>
-<p>Alexander Braverman, Michael Finkelberg, Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_162119e19154492838ef41aaa13733a05834f1c8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, II</em> (<a href='http://arxiv.org/abs/1601.03586'>arXiv:1601.03586</a>)</p>
+<p>Alexander Braverman, Michael Finkelberg, Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_7ed3be712d9ea43678fe8e279fa58d44c49e9777_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, II</em> (<a href='http://arxiv.org/abs/1601.03586'>arXiv:1601.03586</a>)</p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Constantin+Teleman'>Constantin Teleman</a>, <em>The role of Coulomb branches in 2D gauge theory</em>, (<a href='https://arxiv.org/abs/1801.10124'>arXiv:1801.10124</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ben+Webster'>Ben Webster</a>, <em>Koszul duality between Higgs and Coulomb categories <math class='maruku-mathml' display='inline' id='mathml_7ed3be712d9ea43678fe8e279fa58d44c49e9777_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi></mrow><annotation encoding='application/x-tex'>\mathcal{O}</annotation></semantics></math></em>, (<a href='https://arxiv.org/abs/1611.06541'>arXiv:1611.06541</a>)</p>
 </li>
 </ul>
 
@@ -1071,14 +1075,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 19, 2018 12:19:04 
+  Revised on February 19, 2018 17:35:18 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
   (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Coulomb+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coulomb+branch/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Coulomb+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coulomb+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Coulomb+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coulomb+branch/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Coulomb+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coulomb+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
